AX: Improve support for aria-owns in aria trees https://bugs.webkit.org/show_bug.cgi?id=233383

Patch by Sepand Parhami <sparhami@apple.com> on 2022-01-18
Reviewed by Chris Fleizach.

Source/WebCore:

Better supports aria-owns in trees by following children specified through ownership similar
to how DOM children are handled. Previously, you could use aria-owns for only one level of
ownership. This change also fixes tree items being included twice (once as a DOM child and
another time via aria-owns) and supports using both DOM children and aria-owns on a single
element. This change only affects trees via a change to ariaTreeRows and does not change
aria-owns behavior in general.

Tests: accessibility/mac/treeitem-row-delegation.html
       accessibility/mac/treeitem-row-delegation-poorly-formed.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::ariaTreeRows):
* accessibility/AccessibilityObject.h:

LayoutTests:

Adds test cases for additional specified behavior of aria-owns in trees as well as tests to
make sure incorrect aria-owns usage does not cause crashes.

* accessibility/mac/treeitem-row-delegation-expected.txt:
* accessibility/mac/treeitem-row-delegation-poorly-formed-expected.txt: Added.
* accessibility/mac/treeitem-row-delegation-poorly-formed.html: Added.
* accessibility/mac/treeitem-row-delegation.html:


Canonical link: https://commits.webkit.org/246131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288117 268f45cc-cd09-0410-ab3c-d52691b4dbfc